About us section alignment corrections

--- a/_assets/scss/components/_about-us.scss
+++ b/_assets/scss/components/_about-us.scss
@@ -22,6 +22,7 @@ $aboutUsSmallBoth: $aboutUsSmallTop + $aboutUsSmallBottom;
     display: block;
     @include breakpoint(large){
       display: flex;
+      justify-content: center;
     }
   }
   
@@ -170,13 +171,22 @@ $aboutUsSmallBoth: $aboutUsSmallTop + $aboutUsSmallBottom;
     }
   }
   &__header{
-    margin-top: $aboutUsSmallBottom * 0.5;
 
     @include breakpoint(large) {
-      margin-top: $aboutUsBottom * 0.5;
-      
+      align-self: center; 
     }
-    transition: translateY(-50%);
+    h2{
+
+      margin-top: $aboutUsSmallBottom * 0.5;
+
+      @include breakpoint(large) {
+        //margin-top: $aboutUsBottom * 0.5;
+        margin-top: 0; 
+        transition: none;
+        margin-bottom: $m-large;
+      }
+      transition: translateY(-50%);
+    }
   }
   &__link{
     font-family: $ff-oswald;
